# ExampleG4

./: CMakeLists.txt  ExampleG4.cc  vis.mac
include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh
src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc
